minor formatting fixes

--- a/hu_wuhu_72.adoc
+++ b/hu_wuhu_72.adoc
@@ -1,8 +1,8 @@
 ---
 sidebar: sidebar
 permalink: hu_wuhu_72.html
-keywords:
-summary:
+keywords: wuhu, 7.2, host utilities, SAN, windows, unified
+summary: Windows Unified host utilities includes an installation program that sets the required Windows registry and HBA parameters so that the Windows host correctly handles the storage system behaviors for NetApp ONTAP and E-Series platforms.
 ---
 
 = Windows Unified Host Utilities 7.2
