--- a/hu_wuhu_71_rn.adoc
+++ b/hu_wuhu_71_rn.adoc
@@ -14,7 +14,7 @@ summary: Release Notes for Windows Unified Host Utilities
 :linkattrs:
 :imagesdir: ./media/
 
-
+[.lead]
 This Release Notes document contains the latest information for the Windows Unified Host Utilities 7.1 and 7.2 releases, including updates about new features, enhancements, and known issues. The document is updated when new information on using the Windows Host Utilities becomes available.
 
 == About the Windows Unified Host Utilities 
@@ -36,7 +36,7 @@ NetApp qualifies additional components between releases of the Host Utilities so
 
 * Windows Unified Host Utilities 7.1 includes support for E-Series storage systems, support for ONTAP 9 and later versions, and enhanced iSCSI timeouts for faster failover.
 
-* Windows Unified Host Utilities 7.2 includes support for NVMe/FC driver parameter settings and bug fixes for new vendor cards
+* Windows Unified Host Utilities 7.2 includes support for NVMe/FC driver parameter settings and bug fixes for new vendor cards.
 
 == Important cautions
 
@@ -46,7 +46,8 @@ For more information about an individual bug and to explore other bug-related to
 
 
 === Installing the required hotfixes
-To make sure a successful installation or upgrade of Windows Unified Host Utilities, you need to install a specific Windows hotfix. Some hotfixes are a component of Windows updates. 
+
+To ensure a successful installation or upgrade of Windows Unified Host Utilities, you need to install a specific Windows hotfix. Some hotfixes are a component of Windows updates. 
 
 Refer to the link:hu_wuhu_72.html[Windows Host Utilities documentation] for your specific configuration hotfix requirements.
 
@@ -59,7 +60,7 @@ Some unexpected and potentially undesired behaviors, as well as, in some cases, 
 |Title	|Description |Workaround
 |Running the `linux_gos_timeout-install.sh` script is no longer required on Hyper-V guests running Red Hat Enterprise Linux or SUSE Linux Enterprise Server |You are no longer required to run the `linux_gos_timeout-install.sh` script to change disk timeouts on Red Hat Enterprise Linux 5, Red Hat Enterprise Linux 6, or SUSE Linux Enterprise Server 11 Hyper-V guests because the default timeout settings are being used. The `linux_gos_timeout-install.sh` script that was included in previous versions of the Host Utilities is no longer included in the Windows Unified Host Utilities. Windows Unified Host Utilities 7.1 uses the default disk timeout settings.|Not Applicable
 |iSCSI sessions do not reconnect after reboot with mixed IPv4 and IPv6 |In a multipath I/O (MPIO) configuration or multiple connections per session (MCS) configuration that has both IPv4 and IPv6 endpoints, some iSCSI sessions might fail to reconnect after rebooting the Windows host.
-|To ensure that all of your iSCSI paths return after a reboot, use either all IPv4 endpoints or all IPv6. Do not mix IPv4 and IPv6.
+|To verify that all of your iSCSI paths return after a reboot, use either all IPv4 endpoints or all IPv6. Do not mix IPv4 and IPv6.
 |MCS is not supported with iSCSI software boot |When using iSCSI software boot with iSCSI multiple connections per session (MCS), the iSCSI boot leading connection cannot be protected. This can lead to disconnection from the boot LUN causing the host to crash.
 |Microsoft does not support MCS for iSCSI software booted hosts. Use MPIO as the high availability solution. Note that mixing MPIO and MCS is not supported.
 |===
